[package]
name = "vector_calculus"
version = "0.1.0"
description = "A single easy-to-use library for all vector calculus computations"
authors = ["oki"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.17"
rand = "0.8.5"